Issue #28164: Correctly handle special console filenames (patch by Eryk Sun)